--- a/001.HTML/010.Pj_BIFF/css/submedia.css
+++ b/001.HTML/010.Pj_BIFF/css/submedia.css
@@ -141,7 +141,7 @@
 /************************* 모바일기준 500px 이하 *************************/
 @media only screen and (max-width: 500px) {
 
-    .gnb2 li {
+    /* .gnb2 li {
         font-size: 1.3vh;
     }
 
@@ -156,9 +156,15 @@
         to {
             width: 330px;
         }
-    }
+    } */
 
     .menu {
-        font-size: 11px;
+        font-size: 23px;
     }
+
+    .cont2 .characters h2{
+        /* font-size: 130%; */
+        
+    }
+
 }
