--- a/001.HTML/010.Pj_BIFF/css/submedia.css
+++ b/001.HTML/010.Pj_BIFF/css/submedia.css
@@ -133,6 +133,10 @@
         font-size: 25px;
 
     }
+
+    .cont3 .txtbx {
+        font-size: 15px;
+    }
 }
 
 /************************* 모바일기준 385px 이하 *************************/
