--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -345,17 +345,6 @@ abbr {
     object-fit: cover;
 }
 
-/* .back {
-    position: absolute;
-    top: 9%;
-    left: 3%;
-    z-index: 99;
-    padding-left: 25px;
-    background-position-y: 6px;
-    color: #fff;
-    cursor: pointer;
-} */
-
 /******************************************* Cont2 ******************************************/
 .cont2 {
     background: url(../img/sub4img/bottomback.jpeg) no-repeat 50% 50%/cover;
@@ -537,9 +526,9 @@ section .inner {
 }
 
 /******************************************* Cont4 ******************************************/
-.cont4 .swiper {
+.cont4 {
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .cont4 .swiper-slide {
@@ -554,7 +543,7 @@ section .inner {
 .cont4 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
