--- a/001.HTML/010.Pj_BIFF/css/submedia.css
+++ b/001.HTML/010.Pj_BIFF/css/submedia.css
@@ -2,12 +2,16 @@
 
 /************************* 모바일기준 1360px 이하 *************************/
 @media only screen and (max-width: 1360px) {
-    .cont1 {
+    .cont1, .cont4 {
         position: relative;
         padding-bottom: 56.25%;
         height: 0;
         overflow: hidden;
         max-width: 100%;
+    }
+    .cont4 .swiper-slide img{
+    height: 100%;
+    object-fit: cover;
     }
 }
 
