--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -2,9 +2,9 @@
 /* 공통 */
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li{padding: 0;margin: 0;}
-body{font-family: 'Permanent Marker', cursive; letter-spacing: 10px;}
+body{font-family: 'Permanent Marker', cursive; letter-spacing: 6px;}
 ul,ol,li{list-style: none;}
-*{box-sizing: border-box; border: 2px dotted red;}
+*{box-sizing: border-box;}
 
 /* 레이아웃 */
 /* 헤더 */
@@ -35,6 +35,7 @@ ul,ol,li{list-style: none;}
     position: relative;
     padding: 0 20px;
     font-size: 30px;
+    background-color: #ebe7e4;
 }
 .header::after{
     content: '';
@@ -54,6 +55,39 @@ ul,ol,li{list-style: none;}
     transform: translateX(-50%);
 }
 .header .menuBtn{
-    float: right;
-    line-height: 100px;
+    cursor: pointer;
+    position: absolute;
+    right: 2%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 5%;
+    height: 50%;
+    z-index: 9999;
+}
+
+.menuBox{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: greenyellow;
+    display: none;
+}
+.menuBox.on{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
+.menuBtn img{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    display: block;
+    border-radius: 25%;
+}
+.menuBtn img:hover{
+    filter: grayscale(0)
 }
