--- a/001.HTML/012.Blue_PJ/css/intro.css
+++ b/001.HTML/012.Blue_PJ/css/intro.css
@@ -29,25 +29,25 @@ a {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .wrap .bg {
     position: relative;
     background: url(../images/hifive1.webp) no-repeat 0 0/cover;
-    height: 80vh;
+    height: 100vh;
     filter: grayscale(1);
     z-index: 1;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .wrap .tit {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     position: absolute;
-    width: 18vw;
+    width: 23vw;
     height: 40vh;
-    top: 30%;
-    left: 12%;
+    top: 40%;
+    left: 13%;
     border-radius: 500px;
     padding-top: 30px;
     cursor: pointer;
@@ -64,20 +64,16 @@ a {
 }
 
 .wrap .wall {
-    /* filter: grayscale(1);
-    background: url(../images/hifive1.webp) no-repeat 0 0/cover; */
-    /* position: absolute;
+    filter: grayscale(1);
+    background: url(../images/wall2.png) no-repeat 0 0/cover;
+    position: absolute;
     bottom: 0;
-    left: 0; */
+    left: 0;
     height: 100%;
-    width: 300%;
+    width: 100%;
     font-size: 100px;
-    /* border: 1px solid yellow;
-    background-color: lightyellow; */
     left: 0;
     bottom: 0;
-    position: relative;
-    animation: left 15s linear infinite;
 }
 
 .wrap .tit:hover+.bg+.wall {
@@ -86,16 +82,5 @@ a {
 
 /* 반응형 */
 @media (max-width: 768px) {
-    .wrap .tit {
-        top: 7%;
-        left: 11%;
-        width: 100px;
-        height: 130px;
-        padding-top: 5px;
-        line-height: 135px;
-    }
-
-    .wrap .tit a {
-        font-size: 1.5vw;
-    }
+    
 }
