--- a/001.HTML/000.T_Pj/3.Dune2_Pj/dune_pj.css
+++ b/001.HTML/000.T_Pj/3.Dune2_Pj/dune_pj.css
@@ -8,7 +8,7 @@ html,body,header,div,nav,ul,ol,li,h1,h2,h3,h4,h5,p,a,footer,main{
     color: #ae834c;
 }
 .inner{
-    width: 1000px;
+    width: 100vh;
     margin: 0 auto;
 }
 img{
@@ -133,7 +133,7 @@ i{
 .hamSideMenu ul{
     display: none;
 }
-/* --------------------------------헤더부분-------------------------------- */
+/* --------------------------------메인부분-------------------------------- */
 .cont{
     background: url(img/bg.jpg) no-repeat center center/cover;
     height: 882px;
