--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -1,13 +1,14 @@
 @charset 'utf-8';
 /* 공통 */
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Oswald:wght@200;300;400;500;700&family=Permanent+Marker&display=swap');
 html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li{padding: 0;margin: 0;}
-body{font-family: 'Permanent Marker', cursive; letter-spacing: 6px;}
+body{font-family: 'Oswald', sans-serif; background-color: silver;}
 ul,ol,li{list-style: none;}
 *{box-sizing: border-box;}
+a{color: #000; text-decoration: none;}
+img{vertical-align: middle}
 
 /* 레이아웃 */
-/* 헤더 */
 .wrapBox{
     margin: 0 auto;
 }
@@ -15,16 +16,36 @@ ul,ol,li{list-style: none;}
     width: 100%;
     height: 100px;
 }
-/* cont */
 .wrapBox .cont{
+    position: relative;
     margin: 0 auto;
     height: 100vh;
     width: 90vw;
 }
+.cont .down{
+    position: absolute;
+    left: 50%;
+    bottom: 3%;
+    transform: translateX(-50%);
+    animation: down 2.5s linear infinite;
+    text-align: center;
+}
+.cont .down img{
+    height: 5vh;
+    cursor: pointer;
+}
+@keyframes down {
+    0%{transform: translateY(-10px);
+        }
+    25%{transform: translateY(0px);}
+    50%{transform: translateY(10px);}
+    75%{transform: translateY(0px);}
+    100%{transform: translateY(-10px);
+        }
+}
 .wrapBox .cont.cont1{
     height: calc(100vh - 100px);
 }
-/* footer */
 .footer{
     width: 100%;
     height: 80px;
@@ -34,7 +55,7 @@ ul,ol,li{list-style: none;}
 .header{
     position: relative;
     padding: 0 20px;
-    font-size: 30px;
+    font-size: 20px;
     background-color: #ebe7e4;
 }
 .header::after{
@@ -46,41 +67,28 @@ ul,ol,li{list-style: none;}
 .header .title{
     line-height: 100px;
 }
-.header .subH1{
-    float: left;
-}
 .header .mainH1{
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    font-family: 'Permanent Marker', cursive;
+    letter-spacing: 3px;
 }
+.header .subH2{
+    float: left;
+}
+
 .header .menuBtn{
     cursor: pointer;
     position: absolute;
     right: 2%;
     top: 50%;
     transform: translateY(-50%);
-    width: 5%;
-    height: 50%;
+    width: 4vw;
+    height: 3vh;
     z-index: 9999;
 }
 
-.menuBox{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: greenyellow;
-    display: none;
-}
-.menuBox.on{
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-}
 .menuBtn img{
     width: 100%;
     height: 100%;
@@ -88,6 +96,92 @@ ul,ol,li{list-style: none;}
     display: block;
     border-radius: 25%;
 }
+
 .menuBtn img:hover{
     filter: grayscale(0)
+}
+/* --------------Main cont1-------------- */
+.cont1{
+    background-color: lightyellow;
+    display: flex;
+    justify-content: space-between;
+}
+.cont1>div{
+    width: 33.33%;
+    padding: 15px;
+}
+.cont1 h3{
+    font-family: 'Cardo', serif;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+}
+.cont1 p{
+    text-align: center;
+    font-weight: 300;
+}
+/* --------------------메인 왼쪽-------------------- */
+.cont1 .mainL{
+    border: 1px solid red;
+    width: 33%;
+}
+.cont1 .mainL .mainImgL{
+    width: 100%;
+    height: 20vh;
+    background: url(../images/hifive1.webp) no-repeat 0 50%/100%;
+    filter: grayscale(1);
+}
+.cont1 .mainL .mainImgL:hover{
+    filter: grayscale(0)
+}
+.cont1 .mainL .mainTitL{
+
+}
+/* --------------------메인 가운데-------------------- */
+.cont1 .mainC{
+    border: 1px solid blue;
+}
+.cont1 .mainC .mainImgC1{
+    margin: auto;
+    width: 100%;
+    height: 20%;
+    background: url(../images/mainC1-1.jpeg) no-repeat 50% 50%/100%;
+    position: relative;
+}
+.cont1 .mainImgC1:hover{
+    background: url(../images/article_thumbnail_19.png) no-repeat 50% 50%/100%;
+}
+.cont1 .mainC .mainTitC{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 2.5vh;
+    white-space: nowrap;
+    color: #fff;
+}
+/* .cont1 .mainC .mainImgC1:hover .mainTitC{
+    display: block;
+} */
+.cont1 .mainC .mainImgC2{
+    width: 100%;
+    height: 80%;
+    background: url(../images/mainC2-1.jpeg) no-repeat 50% 50%/100%;
+    filter: grayscale(1);
+}
+.cont1 .mainC .mainImgC2:hover{
+    filter: grayscale(0)
+}
+/* --------------------메인 오른쪽-------------------- */
+.cont1 .mainR{
+    border: 1px solid green;
+}
+.cont1 .mainR .mainImgR{
+    width: 100%;
+    height: 20vh;
+    background: url(../images/mainR1.jpeg) no-repeat 0 100%/100%;
+}
+.cont1 .mainR .mainImgR:hover{
+    filter: invert(1)
 }
