--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -82,7 +82,6 @@ img{vertical-align: middle}
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    letter-spacing: 3px;
 }
 .header .subH2{
     float: left;
@@ -215,6 +214,8 @@ img{vertical-align: middle}
 .cont2 .Mvideo{
     position: absolute;
     width: 100%;
+    height: 100%;
     top: 50%;
     transform: translateY(-50%);
-    }
+}
+/* ------------------------cont3------------------------ */
