--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -230,7 +230,7 @@ align-items: center;
 display: block;
 width: 100%;
 height: 100%;
-object-fit: cover;
+/* object-fit: cover; */
 }
 .wrapBox .cont2 .mySwiper .swiper-button-next, .swiper-button-prev{
 color: #fff;
