--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -1,12 +1,13 @@
 @charset 'utf-8';
 /* 공통 */
 @import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Oswald:wght@200;300;400;500;700&family=Permanent+Marker&display=swap');
-html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li{padding: 0;margin: 0;}
+html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li,button{padding: 0;margin: 0;}
 body{font-family: 'Oswald', sans-serif;}
 ul,ol,li{list-style: none;}
 *{box-sizing: border-box;}
 a{color: #000; text-decoration: none;}
 img{vertical-align: middle}
+button{background: none; border: none; font-size: 1em; font-weight: 200; font-family: 'Oswald', sans-serif;}
 
 /* 레이아웃 */
 .wrapBox{
@@ -210,34 +211,52 @@ img{vertical-align: middle}
 }
 /* ------------------------cont2------------------------ */
 .wrapBox .cont.cont2{
-    width: 100vw;
+    /* border: 1px solid blue; */
 }
-.swiper {
+.cont2 .swiper {
+    width: 95%;
+    height: 90%;
+    top: 5%;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide img {
+    display: block;
     width: 100%;
     height: 100%;
-  }
-
-.swiper-slide {
-text-align: center;
-font-size: 18px;
-background: #fff;
-display: flex;
-justify-content: center;
-align-items: center;
+    /* object-fit: cover; */
 }
-
-.swiper-slide img {
-display: block;
-width: 100%;
-height: 100%;
-/* object-fit: cover; */
+.wrapBox .cont2 .swiper-button-next, .swiper-button-prev{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    opacity: .1;
+    transition: opacity .5s ease-in-out;
 }
-.wrapBox .cont2 .mySwiper .swiper-button-next, .swiper-button-prev{
-color: #fff;
+.wrapBox .cont2 .swiper-button-prev{
+    background: url(../images/prev2.svg) no-repeat 50%/20px;
+    left: 0;
 }
-.wrapBox .cont2 .mySwiper .swiper-button-next::after,
-.wrapBox .cont2 .mySwiper .swiper-button-prev::after{
-      font-size: 1.7vw;
+.wrapBox .cont2 .swiper-button-next{
+    background: url(../images/next2.svg) no-repeat 50%/20px;
+    right: 0;
+}
+.wrapBox .cont2 .swiper-button-next:hover,
+.wrapBox .cont2 .swiper-button-prev:hover{
+    opacity: .7;
+}
+.wrapBox .cont2 .swiper-button-next::after,
+.wrapBox .cont2 .swiper-button-prev::after{
+    display: none;
+}
+.cont2 .swiper-pagination{
+    bottom: 1.5%;
 }
 .swiper-pagination-clickable .swiper-pagination-bullet{
     background: url(../images/pager.svg);
@@ -249,41 +268,80 @@ color: #fff;
 /* ------------------------cont3------------------------ */
 .cont3{
     display: flex;
-}
-.cont3 h4{
     text-align: center;
 }
 .cont3 .c3boxL{
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
     width: 40%;
     height: 100%;
 }
 .cont3 .c3boxL .c3titL{
-    outline: 1px dotted cyan;
+    /* outline: 1px dotted cyan; */
     height: 20%;
-    
+    position: relative;
 }
 .cont3 .c3boxL .c3imgbxL{
-    outline: 1px dotted firebrick;
+    /* outline: 1px dotted firebrick; */
     height: 80%;
+}
+.cont3 .c3boxL .c3imgbxL .c3imgL{
+    width: 100%;
+    height: 100%;
+    background: url(../images/main-imageL.jpeg) no-repeat 50%/90%;
 }
 
 .cont3 .c3boxR{
-    outline: 1px solid blue;
+    /* outline: 1px solid blue; */
     width: 60%;
     height: 100%;
 }
 .cont3 .c3boxR .c3imgbxR{
-    outline: 1px dotted firebrick;
+    /* outline: 1px dotted firebrick; */
     height: 70%;
 }
+.cont3 .c3boxR .c3imgbxR .c3imgR{
+    width: 100%;
+    height: 100%;
+    background: url(../images/newspaper.jpeg) no-repeat 50%/90%;
+}
 .cont3 .c3boxR .c3titR{
-    outline: 1px dotted cyan;
+    /* outline: 1px dotted cyan; */
     height: 30%;
+    position: relative;
+}
+.cont3 .tWrap{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+}
+.cont3 .tWrap h4{
+    font-size: 1.3em;
+    font-weight: 500;
+}
+.cont3 .tWrap p{
+    font-size: 1em;
+    font-weight: 300;
 }
 
 /* ------------------------footer------------------------ */
 .footer{
     outline: 1px dotted hotpink;
-    height: 310px;
+    margin: auto;
+    height: 200px;
+    width: 90vw;
+    font-size: 1em;
+    font-weight: 200;
+    display: flex;
+    justify-content: space-between;
+}
+.footer .footCbx{
+    display: flex;
+}
+.footer .footCbx .menu{
+    padding: 0 50px;
+}
+.footer .footCbx .menu a:hover{
+    text-decoration: underline;
+    color: #777;
 }
