--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -6,6 +6,7 @@ body{font-family: 'Oswald', sans-serif;}
 ul,ol,li{list-style: none;}
 *{box-sizing: border-box;}
 a{color: #000; text-decoration: none;}
+i{font-style: normal;}
 img{vertical-align: middle}
 button{background: none; border: none; font-size: 1em; font-weight: 200; font-family: 'Oswald', sans-serif;}
 
@@ -26,7 +27,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .cont .down{
     color: #1b3486;
     position: fixed;
-    right: 2%;
+    right: 50%;
     bottom: 3%;
     transform: translateX(-50%);
     animation: down 2s linear infinite;
@@ -212,6 +213,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 /* ------------------------cont2------------------------ */
 .wrapBox .cont.cont2{
     /* border: 1px solid blue; */
+    margin-bottom: 60px;
 }
 .cont2 .swiper {
     width: 95%;
@@ -326,14 +328,27 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 
 /* ------------------------footer------------------------ */
 .footer{
-    outline: 1px dotted hotpink;
+    /* outline: 1px dotted hotpink; */
     margin: auto;
+    padding-top: 30px;
     height: 200px;
     width: 90vw;
     font-size: 1em;
     font-weight: 200;
+}
+.footer .footInfo{
     display: flex;
     justify-content: space-between;
+    height: 70%;
+}
+.footer .footLbx{
+    font-size: 14px;
+}
+.footer .footLbx ul li{
+    padding: 2px 0;
+}
+.footer .footLbx ul li:first-child{
+    padding-top: 0;
 }
 .footer .footCbx{
     display: flex;
@@ -344,4 +359,33 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .footer .footCbx .menu a:hover{
     text-decoration: underline;
     color: #777;
+}
+.footer .snsWrap{
+    width: 270px;
+    /* border: 1px solid #000; */
+    text-align: right;
+    padding-top: 30px;
+}
+.footer .snsWrap .snsTit{
+    border-bottom: 1px solid #d2d2d2;
+    padding-bottom: 13px;
+}
+.footer .snsWrap .sns{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 13px;
+}
+.footer .copy ul{
+    width: 100%;
+    font-size: .6em;
+}
+.footer .copy ul{
+    overflow: hidden;
+}
+.footer .copy ul li{
+    float: left;
+    padding: 0 5px;
+}
+.footer .copy ul li:first-child{
+    padding-left: 0;
 }
